Fix formatting of footer on mobile

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -6,11 +6,34 @@
 }
 section#page {
   height:100%;
-  padding-bottom:$footer-padding;
+  padding-bottom:$footer-height;
 }
 
 .footer {
   position: absolute;
+  height: $footer-height;
   bottom:0px;
   width:100%;
+  padding-top:0px;
+}
+
+li.footer-item {
+  line-height: $footer-height;
+  margin-top:0px !important;
+  margin-bottom:0px !important;
+}
+
+@media screen and (max-device-width: 767px) {
+  /* some CSS here */
+  li.footer-item {
+    line-height: $footer-height/2;
+    margin-top:0px !important;
+    margin-bottom:0px !important;
+    vertical-align: bottom;
+  }
+
+  #copyright{
+    text-align: center;
+  }
+
 }
