--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,2 +1,2 @@
 $content-padding-top: 100px;
-$footer-padding: 88px
+$footer-height: 88px
